objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>ABA_AP_Event__c</fullName>
        <label>ABA AP Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>CASESAFEID(Contact.Account.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone2__c</fullName>
        <formula>Contact.Account.Phone_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Invitation_Status__c</fullName>
        <formula>TEXT( Attendee__r.evt__Invitation_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Invitation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>evt__Attendee__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign2ID__c</fullName>
        <formula>Contact.Campaign2ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign2ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <formula>Contact.CampaignID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Roles__c</fullName>
        <formula>TEXT(Contact.Account_Roles__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact- Account Roles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Until_Deleted__c</fullName>
        <formula>Delete_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Deleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delete_Date__c</fullName>
        <description>Used to delete this campaign member after a specified period of time. Currently used by the Platinum Declining Credit Card flow to remove campaign members after emails are sent.</description>
        <inlineHelpText>Used to delete this campaign member after a specified period of time. Currently only used by the Platinum Declining Credit Card notification flows to remove campaign members after emails are sent.</inlineHelpText>
        <label>Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delete_this_Campaign_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will delete the Campaign Member</inlineHelpText>
        <label>Delete this Campaign Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventBright_Member_ID__c</fullName>
        <description>The ID number of the individual record</description>
        <label>EventBright Member ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventBright_Member_Status__c</fullName>
        <label>EventBright Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                    <default>true</default>
                    <label>Registered</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventBright_Sales_Rep__c</fullName>
        <description>This is the person that put the ticket sale into the system</description>
        <label>EventBright Sales Rep</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventBrite_Sale_ID__c</fullName>
        <description>Field used to display the sale ID</description>
        <label>EventBrite Sale ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <formula>IF( 
AND(
ISBLANK(  LeadId  ),
TEXT(Contact.Account_Roles__c) = &quot;Primary Contact&quot;),
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Law_Sale_code_contact__c</fullName>
        <formula>Contact.Law_Sale_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Law Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Lead_Source__c</fullName>
        <formula>IF(Contact.Id != NULL,  IF(Contact.Account_Main_Lead_Source__c = NULL,   TEXT(Contact.Main_Lead_Source__c),Contact.Account_Main_Lead_Source__c) ,
IF(Lead.Id != NULL,  TEXT(Lead.Main_Lead_Source__c), NULL))</formula>
        <label>Main Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Created_Date__c</fullName>
        <description>Used for related lists</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name_of_Event_Guest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Eventbright Guest</description>
        <label>Name of Event Guest</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Campaign_Source__c</fullName>
        <businessOwnerUser>dgass@andersonadvisors.com.octopus</businessOwnerUser>
        <description>Displays Original Campaign Source from Contact/Lead depending on member type.</description>
        <formula>IF( ISBLANK( ContactId ),  Lead.Original_Campaign_Source__r.Name,  Contact.Account_Original_Campaign_Source__c )</formula>
        <label>Original Campaign Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign__c</fullName>
        <formula>Campaign.Parent_Campaign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum_Type__c</fullName>
        <formula>TEXT(Contact.Account.Platinum_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platinum Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum__c</fullName>
        <formula>Account__r.Platinum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platinum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_or_Guest__c</fullName>
        <label>Primary or Guest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Senior_Advisor__c</fullName>
        <formula>TEXT(Contact.Account.Senior_Advisor_Picklist__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Senior Advisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Sale_code_Contact__c</fullName>
        <formula>Contact.Tax_Sale_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Contact.Team_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titanium__c</fullName>
        <formula>Account__r.Unlimited_LLC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titanium</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_All_Sales__c</fullName>
        <formula>Contact.Account.Total_Value_of_All_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of All Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UTM_Info__c</fullName>
        <formula>Contact.pi__utm_campaign__c + Lead.pi__utm_campaign__c</formula>
        <label>UTM Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Invitation_Code__c</fullName>
        <description>Linvio Events invitation code imported/synced with a special event and it&apos;s invited attendees.</description>
        <inlineHelpText>Linvio Events invitation code imported/synced with a special event and it&apos;s invited attendees.</inlineHelpText>
        <label>Invitation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>